# agent

./: .commit_msg.txt  .dockerignore  .env  .gitignore  .mailmap  .swiftformat  .txt  AGENTS.md  AUTO_APPROVE.md  AUTO_APPROVE_README.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Fix_rfc.md  GETTING-STARTED.md  LICENSE  PR_DESCRIPTION_SLASH_COMMANDS.md  README.md  RFC.md  aqua.yaml  build.sh  cliff.toml  cost-stats.md  custom_slash_command_pr_description.md  init.md  llm-streaming-bug-analysis.md  plan_main.md  pr_description_slash_commands_refactor.md  release.sh  release_notes.md  sandbox_expected_behavior.md  stakpak-dev-dns-backup-20251113-093309.json  stakpak_FIX_ISSUE.md  subagents.toml  summary.md  test.txt  test_file.txt  test_sandbox_examples.md  token-stats.md
cli/: Cargo.toml  README.md  subagents.toml
cli/src/: apikey_auth.rs  apkey_auth.rs  code_index.rs  config.rs  main.rs  onboarding.rs
cli/src/commands/: auto_update.rs  autopilot.rs  board.rs  browser.rs  completion.rs  gateway.rs  mod.rs  plugin_utils.rs  tab.rs  warden.rs
cli/src/commands/acp/: fs_handler.rs  mod.rs  server.rs  utils.rs
cli/src/commands/agent/: mod.rs
cli/src/commands/ak/: mod.rs  sync.rs
cli/src/commands/auth/: list.rs  login.rs  logout.rs  mod.rs  status.rs
cli/src/commands/autopilot/: mod.rs  presenter.rs  probes.rs
cli/src/commands/daemon/: agent.rs  config.rs  db.rs  executor.rs  mod.rs  prompt.rs  scheduler.rs  utils.rs
cli/src/commands/flow/: clone.rs  push.rs  sync.rs
cli/src/commands/mcp/: mod.rs  proxy.rs  server.rs
cli/src/commands/sessions/: messages.rs  mod.rs  output.rs  tests.rs
cli/src/commands/watch/: agent.rs  config.rs  db.rs  executor.rs  mod.rs  prompt.rs  reconciler.rs  scheduler.rs  utils.rs
cli/src/config/: app.rs  commands.rs  file.rs  mod.rs  models_cache.rs  profile.rs  profile_resolver.rs  rulebook.rs  tests.rs  types.rs  warden.rs
cli/src/onboarding/: auth_flow.rs  byom.rs  config_templates.rs  menu.rs  mod.rs  navigation.rs  save_config.rs  styled_output.rs
cli/src/prompts/: system_prompt.v1.md
cli/src/utils/: agent_context.rs  agents_md.rs  apps_md.rs  check_update.rs  cli_colors.rs  gitignore.rs  local_context.rs  mod.rs  network.rs  plugins.rs  server_context.rs  session.rs
cli/src/utils/discovery/: cloud_accounts.rs  crontabs.rs  git_repos.rs  listening_ports.rs  mod.rs  project_markers.rs
cli/tests/: acp_integration_test.rs  ak_cli.rs  common.rs
cli/tests/test_data/: openai_tool_call_response.txt
examples/mcp-clients/rust-client/: .env.example  Cargo.toml
examples/mcp-clients/rust-client/examples/: basic_client.rs  mtls_client.rs  proxy_client.rs  tool_calling.rs
libs/ai/: Cargo.toml  README.md
libs/ai/docs/: PROVIDER_OPTIONS_PLAN.md
libs/ai/examples/: anthropic_generate.rs  anthropic_stream.rs  anthropic_test.rs  basic_generate.rs  config_test.rs  custom_headers.rs  gemini_generate.rs  gemini_stream.rs  multi_provider.rs  simple.rs  streaming.rs  tool_calling_basic.rs  tool_calling_streaming.rs  tracing_otel.rs
libs/ai/src/: error.rs  lib.rs  tracing.rs
libs/ai/src/client/: builder.rs  config.rs  mod.rs
libs/ai/src/provider/: dispatcher.rs  trait_def.rs
libs/ai/src/providers/: mod.rs  tls.rs
libs/ai/src/registry/: mod.rs  models_dev.rs
libs/ai/src/types/: cache.rs  cache_strategy.rs  cache_validator.rs  message.rs  mod.rs  model.rs  options.rs  request.rs  response.rs  stream.rs
libs/ai/tests/integration/: anthropic.rs  (+4 more)
libs/ak/: Cargo.toml
libs/ak/src/: error.rs  lib.rs  search.rs  skills.rs  store.rs
libs/api/: Cargo.toml
libs/api/src/: commands.rs  error.rs  lib.rs  local.rs  message_compat.rs  models.rs  remote.rs  storage.rs
libs/gateway/: Cargo.toml  README.md
libs/gateway/src/: api.rs  chunking.rs  client.rs  config.rs  dispatcher.rs  lib.rs  router.rs  runtime.rs  slack_blocks.rs  store.rs  targeting.rs  types.rs
libs/linux-sandbox/: Cargo.toml  README.md  sandbox-policy.toml.example  sandbox_test_examples.md
libs/linux-sandbox/examples/: basic_usage.rs
libs/linux-sandbox/src/: audit.rs  error.rs  lib.rs  network.rs  policy.rs  sandbox.rs
libs/mcp/client/: Cargo.toml
libs/mcp/proxy/: Cargo.toml
libs/mcp/server/: Cargo.toml  README_SECRETS.md  subagents.toml
libs/popup-widget/: Cargo.toml  README.md
libs/popup-widget/src/: lib.rs  popup.rs  position.rs  tab.rs  traits.rs
libs/server/: Cargo.toml  README.md
libs/server/src/: auth.rs  checkpoint_store.rs  error.rs  event_log.rs  idempotency.rs  lib.rs  message_bridge.rs  openapi.rs  routes.rs  sandbox.rs  session_actor.rs  session_manager.rs  state.rs  types.rs
libs/shared/: Cargo.toml
libs/shared/benches/: README.md  actor_model_memory.rs  benchmark_raw_data.md  gitleaks_memory.rs  secret_manager.rs
libs/shared/src/: auth_manager.rs  cert_utils.rs  container.rs  file_backup_manager.rs  file_scanner.rs  file_watcher.rs  format.rs  hash.rs  helper.rs  lib.rs  local_store.rs  markdown.rs  path_utils.rs  remote_connection.rs  remote_store.rs  secret_manager.rs  sqlite.rs  task_manager.rs  telemetry.rs  terminal_theme.rs  tls_client.rs  utils.rs
libs/shared/tests/: _ssh_integration_test.rs.disabled  secret_redaction_regressions.rs
tui/: Cargo.toml
tui/src/: app.rs  auto_approve.rs  constants.rs  event.rs  event_loop.rs  lib.rs  utils.rs  view.rs
tui/src/app/: events.rs  types.rs
tui/src/services/: approval_bar.rs  approval_popup.rs  auto_approve.rs  auto_approve_popup.rs  auto_complete.rs  banner.rs  bash_block.rs  board_tasks.rs  changeset.rs  clipboard_paste.rs  command_palette.rs  commands.rs  confirmation_dialog.rs  context_popup.rs  create_command_popup.rs  custom_commands.rs  detect_term.rs  disclaimer_popup.rs  editor.rs  file_changes_popup.rs  file_diff.rs  file_search.rs  helper_block.rs  helper_dropdown.rs  hint_helper.rs  image_upload.rs  inline_mode.rs  markdown_renderer.rs  message.rs  message_action_popup.rs  message_pattern.rs  mod.rs  model_switcher.rs  placeholder_prompts.rs  plan.rs  plan_comments.rs  plan_review.rs  policy_persistence_popup.rs  popup.rs  profile_switcher.rs  (+18 more)
(+721 files in other folders)
