[workspace]
resolver = "2"
members = [
    "cli",
    "tui",
    "libs/shared",
    "libs/api",
    "libs/mcp/client",
    "libs/mcp/server",
]
default-members = ["cli"]


[workspace.package]
version = "0.2.62"
edition = "2024"


[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
rmcp = { version = "0.2.1", features = [
    "base64",
    "macros",
    "client",
    "server",
    "reqwest",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-worker",
], default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "=0.12.15", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
toml = "0.8.0"
once_cell = "1.19.0"
rand = "0.9.1"
walkdir = "2.0.0"
notify = "8.0.0"
thiserror = "2.0.12"
rustls = "0.23.29"
rcgen = "0.12.1"
rustls-pemfile = "2.1.2"
tokio-rustls = "0.26.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
time = { version = "0.3", features = ["macros"] }
rustls-platform-verifier = "0.5"
crossterm = "0.28.1"
tempfile = "3.0"
similar = { version = "2.7.0", features = ["inline"] }
log = "0.4"

# Required nightly
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
