[package]
name = "stakpak"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-api = { path = "../libs/api" }
stakpak-mcp-server = { path = "../libs/mcp/server" }
stakpak-mcp-client = { path = "../libs/mcp/client" }
stakpak-tui = { path = "../tui" }
stakpak-shared = { path = "../libs/shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
clap = { version = "4.5.23", features = ["derive", "env"] }
config = "0.14.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8.19"
tokio = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
termimad = "0.31.1"
walkdir = { workspace = true }
rpassword = "7.3"
names = "0.14.0"
tar = "0.4"
flate2 = "1.1"
zip = "4.2"
rand = { workspace = true }
rustls = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
