[package]
name = "stakai"
version.workspace = true
edition = "2024"
authors = ["Stakpak <engineering@stakpak.dev>"]
description = "A provider-agnostic Rust SDK for AI completions with streaming support - Built by Stakpak"
license = "Apache-2.0"
repository = "https://github.com/stakpak/agent"
homepage = "https://stakpak.dev"
documentation = "https://docs.rs/stakai"
keywords = ["ai", "llm", "openai", "anthropic", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[lib]
name = "stakai"
path = "src/lib.rs"

[features]
default = ["openai"]
openai = []
bedrock = ["dep:aws-sdk-bedrockruntime", "dep:aws-config", "dep:aws-smithy-types"]
tracing = ["dep:tracing", "dep:tracing-opentelemetry"]
network-tests = []

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

# HTTP client
reqwest = { workspace = true }
reqwest-eventsource = "0.6"

# TLS
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
bytes = "1"
pin-project = "1"
uuid = { workspace = true }
dirs = "5"

# Tracing (optional, feature-gated)
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# AWS Bedrock (optional, feature-gated)
# Disable default features to exclude the legacy hyper-0.14 + old rustls HTTPS stack.
# We only need: behavior-version-latest (required), rt-tokio (async runtime),
# default-https-client (hyper 1.x + aws-lc TLS stack).
# This avoids compiling duplicate hyper/rustls versions and saves ~4-5MB in binary size.
aws-sdk-bedrockruntime = { version = "1.100", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"], optional = true }
aws-config = { version = "1.5", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client", "sso"], optional = true }
aws-smithy-types = { version = "1.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
anyhow = { workspace = true }

[lints.clippy]
string_slice = "deny"
