[package]
name = "stakpak-api"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-shared = { path = "../../libs/shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
eventsource-stream = "0.2.3"
url = "2.5.0"
urlencoding = "2.1"
async-trait = { workspace = true }
turso = "0.3.2"
libsql = "0.9.29"
async-stream = "0.3.6"
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
itertools = "0.14.0"
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
tempfile = { workspace = true }
