[package]
name = "stakpak-api"
version = { workspace = true }
edition = "2024"
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
stakpak-shared = { workspace = true }
stakai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
eventsource-stream = "0.2.3"
urlencoding = "2.1"
async-trait = { workspace = true }
libsql = "0.9.29"
async-stream = "0.3.6"
tokio = { workspace = true, features = ["macros"] }
serde_yaml = "0.9.34"
once_cell = "1.21.3"
regex.workspace = true
tempfile = { workspace = true }

[lints.clippy]
string_slice = "deny"
