[package]
name = "stakpak-gateway"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
libsql = { workspace = true }
toml = { workspace = true }
dirs = "5.0"
reqwest = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
stakai = { workspace = true }
stakpak-agent-core = { workspace = true }
stakpak-shared = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
bytes = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tempfile = { workspace = true }

[features]
libsql-test = []

[lints]
workspace = true
