[package]
name = "linux-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
log = "0.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
env_logger = "0.11"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "linux_sandbox"
path = "src/lib.rs"

