[package]
name = "stakpak-popup-widget"
version = { workspace = true }
edition = "2021"
description = "Popup widget for Ratatui"
license = "Apache-2.0"
repository = "https://github.com/stakpak/agent"
authors = ["Stakpak Team"]

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
