[package]
name = "stakpak-server"
version = { workspace = true }
edition = "2024"
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "README.md"

[dependencies]
stakai = { workspace = true }
stakpak-agent-core = { workspace = true }
stakpak-api = { workspace = true }
stakpak-mcp-client = { workspace = true }
stakpak-shared = { workspace = true }
stakpak-mcp-proxy = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
dirs = "5.0"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = "0.5"
http-body-util = "0.1"
tempfile = { workspace = true }

[lints.clippy]
string_slice = "deny"
