[package]
name = "stakpak-shared"
version = { workspace = true }
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
notify = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
