[package]
name = "stakpak-shared"
version = { workspace = true }
edition = "2024"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
rustls-platform-verifier = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
axum = "0.8"
tower = "0.4"
hyper = "1.0"
tokio-test = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
