[package]
name = "stakpak-shared"
version = { workspace = true }
edition = "2024"
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[features]
default = []
bedrock = ["stakai/bedrock"]

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
rustls-platform-verifier = { workspace = true }
russh = { version = "0.53.0" }
russh-sftp = { version = "2.1.1" }
dirs = "5.0"
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
stakai = { workspace = true }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.8.0"
itertools = "0.14.0"
# OAuth dependencies
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"


[dev-dependencies]
tempfile = { workspace = true}
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
axum = "0.8"
tower = "0.4"
hyper = "1.0"
tokio-test = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }

[lints.clippy]
string_slice = "deny"
