[package]
name = "stakpak-mcp-rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dotenvy = "0.15"
reqwest = { workspace = true }
rig-core = { version = "0.27.0", features = ["rmcp"] }
rmcp = { version = "0.9", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[example]]
name = "mtls_client"
path = "examples/mtls_client.rs"

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"

[[example]]
name = "proxy_client"
path = "examples/proxy_client.rs"
