[package]
name = "stakpak-mcp-client"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-shared = { path = "../../shared" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
futures = { workspace = true }


[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
