[package]
name = "stakpak-mcp-client"
version = { workspace = true }
edition = "2024"
description = "MCP client implementation for Stakpak"
license = "Apache-2.0"
repository = "https://github.com/stakpak/agent"
authors = ["Stakpak Team"]

[dependencies]
stakpak-shared = { path = "../../shared" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
