[package]
name = "stakpak-mcp-client"
version = { workspace = true }
edition = "2024"
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
stakpak-shared = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
