[package]
name = "stakpak-mcp-proxy"
version.workspace = true
edition.workspace = true
description = "MCP proxy server for Stakpak"
license = "Apache-2.0"
repository = "https://github.com/stakpak/agent"
authors = ["Stakpak Team"]

[dependencies]
stakpak-shared = { path = "../../shared" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
