[package]
name = "stakpak-mcp-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
stakpak-shared = { path = "../../shared" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
