[package]
name = "stakpak-mcp-server"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-api = { path = "../../api" }
stakpak-shared = { path = "../../shared" }
linux-sandbox = { path = "../../linux-sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
axum-server = { workspace = true }
reqwest = { workspace = true }
url = "2.5.0"
fast_html2md = "=0.0.48"
walkdir = { workspace = true }
toml = "0.8"
similar = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
